// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spotify Widget matches the error state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-vhkudu"
    id="spotify"
    tabindex="-1"
  >
    <div
      class="css-33wwjq"
    >
      <div
        class="css-1yb068l"
      >
        <h4>
          Something went wrong
        </h4>
        <p>
          Failed to load this widget.
        </p>
      </div>
      <div
        class="css-oxv113"
      />
    </div>
    <header
      class="css-ubozo4"
    >
      <div
        class="css-3vwaby"
      >
        <div
          aria-hidden="true"
          class="css-1muvmnm"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-spotify"
            data-icon="spotify"
            data-prefix="fab"
            role="img"
            style="width: 14px; height: 14px; color: rgb(255, 255, 255);"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 8a248 248 0 1 0 0 496 248 248 0 1 0 0-496zM356.7 372.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="css-m8374l"
        >
          <h2
            class="css-1tfs9qy"
          >
            Spotify
          </h2>
          <a
            class="css-bgnrb"
            href=""
            title=" on "
          >
            Browse Playlists 
            <span
              class="read-more-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
    </header>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-epkbn4"
      >
        <h3
          class="css-9nh3l5"
        >
          Top Tracks
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        Tracks I've played most over the last four weeks.
      </p>
      <div
        class="css-4kg5kc"
      >
        <div
          class="css-vgd83x"
          data-testid="spotify-top-tracks-carousel"
        >
          <div
            aria-hidden="false"
            class="css-1s44svb"
            data-testid="spotify-top-tracks-page-1"
          >
            <div
              class="media-item_grid null css-rt3umk"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1yz7e9k"
    >
      <div
        class="css-epkbn4"
      >
        <h3
          class="css-9nh3l5"
        >
          Playlists
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 favorite playlists.
      </p>
      <div
        class="media-item_grid null css-rt3umk"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Spotify Widget matches the loaded state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1gmhq94"
    id="spotify"
    tabindex="-1"
  >
    <header
      class="css-f68fi0"
    >
      <div
        class="css-3vwaby"
      >
        <div
          aria-hidden="true"
          class="css-1muvmnm"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-spotify"
            data-icon="spotify"
            data-prefix="fab"
            role="img"
            style="width: 14px; height: 14px; color: rgb(255, 255, 255);"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 8a248 248 0 1 0 0 496 248 248 0 1 0 0-496zM356.7 372.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="css-m8374l"
        >
          <h2
            class="css-1tfs9qy"
          >
            Spotify
          </h2>
          <a
            class="css-bgnrb"
            href="https://spotify.com/user/test"
            title="Test User on Spotify"
          >
            Browse Playlists 
            <span
              class="read-more-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
      <div
        class="css-1df6wzz"
      >
        <div
          class="css-1fzqdmc"
        >
          <div
            class="css-8kzs4n"
          >
            10
          </div>
          <div
            class="css-b1klod"
          >
            Playlists
          </div>
        </div>
        <div
          class="css-1fzqdmc"
        >
          <div
            class="css-8kzs4n"
          >
            20
          </div>
          <div
            class="css-b1klod"
          >
            Top Tracks
          </div>
        </div>
      </div>
    </header>
    <div
      data-testid="ai-summary"
    >
      &lt;p&gt;Test Spotify AI summary.&lt;/p&gt;
    </div>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-epkbn4"
      >
        <h3
          class="css-9nh3l5"
        >
          Top Tracks
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        Tracks I've played most over the last four weeks.
      </p>
      <div
        class="css-4kg5kc"
      >
        <div
          class="css-vgd83x"
          data-testid="spotify-top-tracks-carousel"
        >
          <div
            aria-hidden="false"
            class="css-1s44svb"
            data-testid="spotify-top-tracks-page-1"
          >
            <div
              class="media-item_grid null css-rt3umk"
            >
              <a
                class="media-item_media css-13fusor"
                title="Test Track – [object Object]"
              >
                <div
                  class="css-pcble3"
                >
                  <div
                    class="media-item_caption css-e7oldi"
                  >
                    <span>
                      Test Track
                    </span>
                  </div>
                  <img
                    alt="cover artwork"
                    class="css-526are"
                    crossorigin="anonymous"
                    loading="lazy"
                  />
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1yz7e9k"
    >
      <div
        class="css-epkbn4"
      >
        <h3
          class="css-9nh3l5"
        >
          Playlists
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 favorite playlists.
      </p>
      <div
        class="media-item_grid null css-rt3umk"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Spotify Widget matches the loading state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1gmhq94"
    id="spotify"
    tabindex="-1"
  >
    <header
      class="css-f68fi0"
    >
      <div
        class="css-3vwaby"
      >
        <div
          aria-hidden="true"
          class="css-1muvmnm"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-spotify"
            data-icon="spotify"
            data-prefix="fab"
            role="img"
            style="width: 14px; height: 14px; color: rgb(255, 255, 255);"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 8a248 248 0 1 0 0 496 248 248 0 1 0 0-496zM356.7 372.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="css-m8374l"
        >
          <h2
            class="css-1tfs9qy"
          >
            Spotify
          </h2>
          <output
            aria-busy="true"
            aria-live="polite"
            class="css-hgaagu"
          >
            <svg
              aria-label="Loading"
              class="css-sndroo"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <circle
                cx="12"
                cy="12"
                fill="none"
                r="10"
                stroke="currentColor"
                stroke-dasharray="31.4 31.4"
                stroke-linecap="round"
                stroke-width="3"
              />
            </svg>
          </output>
        </div>
      </div>
      <div
        class="css-1df6wzz"
      >
        <div
          class="css-154mwpr"
        >
          <div
            class="css-8kzs4n"
          >
            —
          </div>
          <div
            class="css-b1klod"
          />
        </div>
        <div
          class="css-154mwpr"
        >
          <div
            class="css-8kzs4n"
          >
            —
          </div>
          <div
            class="css-b1klod"
          />
        </div>
      </div>
    </header>
    <div
      aria-hidden="true"
      class="css-1x6v59e"
    >
      <div
        class="show-loading-animation css-ylcmma"
      >
        <div
          class="text-block"
          style="width: 100%;"
        >
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 97%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0px;"
          />
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 100%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 94%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 90%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
          <div
            class="text-row"
            style="max-height: 11.11111111111111%; width: 98%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
        </div>
      </div>
      <div
        class="css-n4yf41"
      >
        <div
          aria-hidden="true"
          class="css-obv90v"
        />
      </div>
    </div>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-epkbn4"
      >
        <h3
          class="css-9nh3l5"
        >
          Top Tracks
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        Tracks I've played most over the last four weeks.
      </p>
      <div
        class="css-4kg5kc"
      >
        <div
          class="media-item_grid null css-rt3umk"
        >
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
          <div
            class="show-loading-animation css-1yz7e9k"
          >
            <div
              class="rect-shape css-2us3i8"
              style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1yz7e9k"
    >
      <div
        class="css-epkbn4"
      >
        <h3
          class="css-9nh3l5"
        >
          Playlists
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 favorite playlists.
      </p>
      <div
        class="media-item_grid null css-rt3umk"
      >
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation css-1yz7e9k"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Spotify Widget renders without AI summary when not available 1`] = `
<DocumentFragment>
  <section
    class="css-1gmhq94"
    id="spotify"
    tabindex="-1"
  >
    <header
      class="css-f68fi0"
    >
      <div
        class="css-3vwaby"
      >
        <div
          aria-hidden="true"
          class="css-1muvmnm"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-spotify"
            data-icon="spotify"
            data-prefix="fab"
            role="img"
            style="width: 14px; height: 14px; color: rgb(255, 255, 255);"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 8a248 248 0 1 0 0 496 248 248 0 1 0 0-496zM356.7 372.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="css-m8374l"
        >
          <h2
            class="css-1tfs9qy"
          >
            Spotify
          </h2>
          <a
            class="css-bgnrb"
            href="https://spotify.com/user/test"
            title="Test User on Spotify"
          >
            Browse Playlists 
            <span
              class="read-more-icon"
            >
              →
            </span>
          </a>
        </div>
      </div>
      <div
        class="css-1df6wzz"
      >
        <div
          class="css-1fzqdmc"
        >
          <div
            class="css-8kzs4n"
          >
            10
          </div>
          <div
            class="css-b1klod"
          >
            Playlists
          </div>
        </div>
        <div
          class="css-1fzqdmc"
        >
          <div
            class="css-8kzs4n"
          >
            20
          </div>
          <div
            class="css-b1klod"
          >
            Top Tracks
          </div>
        </div>
      </div>
    </header>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-epkbn4"
      >
        <h3
          class="css-9nh3l5"
        >
          Top Tracks
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        Tracks I've played most over the last four weeks.
      </p>
      <div
        class="css-4kg5kc"
      >
        <div
          class="css-vgd83x"
          data-testid="spotify-top-tracks-carousel"
        >
          <div
            aria-hidden="false"
            class="css-1s44svb"
            data-testid="spotify-top-tracks-page-1"
          >
            <div
              class="media-item_grid null css-rt3umk"
            >
              <a
                class="media-item_media css-13fusor"
                title="Test Track – [object Object]"
              >
                <div
                  class="css-pcble3"
                >
                  <div
                    class="media-item_caption css-e7oldi"
                  >
                    <span>
                      Test Track
                    </span>
                  </div>
                  <img
                    alt="cover artwork"
                    class="css-526are"
                    crossorigin="anonymous"
                    loading="lazy"
                  />
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1yz7e9k"
    >
      <div
        class="css-epkbn4"
      >
        <h3
          class="css-9nh3l5"
        >
          Playlists
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 favorite playlists.
      </p>
      <div
        class="media-item_grid null css-rt3umk"
      />
    </div>
  </section>
</DocumentFragment>
`;
